--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <h1 class="headding">
             FROM PRACTICE
           </h1>
+          <div style="text-align: center;">GITの練習中です。</div>
           <form action="">
             <select class="osushi" name="osushi">
               <option valu="1">
